--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "jspdf-autotable": "^3.8.2",
     "lucide-react": "^0.292.0",
     "mapbox-gl": "^3.0.1",
-    "next": "14.0.2",
+    "next": "^14.2.11",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "papaparse": "^5.4.1",
